src/global/core-modules/emr-server-mgmt/objects/EmrServer__c/EmrServer__c.object-meta.xml
<CustomObject>
    <label>EMR Server</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMR Servers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>