src/global/core-modules/emr-server-mgmt/objects/EmrServer__c/fields/ApiSchemaSpec__c.field-meta.xml
<CustomField>
    <fullName>ApiSchemaSpec__c</fullName>
    <description>Specifies the API Schema Specifications. Will map to a target class. Eg. if spec is Artemis then a class ArtemisRestClient must exist</description>
    <label>API Schema Spec</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artemis</fullName>
                <default>true</default>
                <label>Artemis</label>
            </value>
            <value>
                <fullName>Sivis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>