src/global/core-modules/emr-server-mgmt/objects/EmrServer__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>API Name of the Named Credential associated with the EMR Server record, used for authentication purposes.</description>
    <inlineHelpText>Enter the Developer API Name of the Named Credential that will be used for authentication with the EMR Server.</inlineHelpText>
    <label>Named Credential</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>