src/global/core-modules/emr-server-mgmt/objects/EmrServer__c/fields/OutboundRequestsRetentionPeriod__c.field-meta.xml
<CustomField>
    <fullName>OutboundRequestsRetentionPeriod__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Defines the retention period for outbound requests in days. This setting determines how long outbound request records will be retained in the system before being automatically deleted.
Note that a value of &apos;0&apos; or any negative number will be considered as unlimited retention, preventing automatic deletion of outbound requests.</description>
    <inlineHelpText>The number of days to retain requests. A value of &apos;0&apos; or any negative number means unlimited retention.</inlineHelpText>
    <label>Outbound requests retention period</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>