src/global/core-modules/emr-server-mgmt/objects/EmrServer__c/fields/TimeoutRequestPeriod__c.field-meta.xml
<CustomField>
    <fullName>TimeoutRequestPeriod__c</fullName>
    <defaultValue>60000</defaultValue>
    <inlineHelpText>In milliseconds</inlineHelpText>
    <label>Timeout request after (ms)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>