src/global/core-modules/emr-server-mgmt/objects/EmrServer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NamedCredential__c</columns>
    <columns>InboundRequestsRetentionPeriod__c</columns>
    <columns>OutboundRequestsRetentionPeriod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>